# nicecv

./: .editorconfig  .gitignore  .pre-commit-config.yaml  celerybeat-schedule  countries.json  db.sqlite3  https_console  ideas.txt  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.in  requirements.txt  requirements.txt.orig  setup.cfg  tailwind.config.js  temp.html
_ideas/: dev_ideas.txt  models.txt
accounts/: admin.py  factories.py  forms.py  models.py  tests.py  urls.py  views.py
celery_progress_htmx/: tasks.py
cms/: __init__.py  apps.py  blocks.py  context_processors.py  heroicons.py  streams.py  translation.py  utils.py  wagtail_hooks.py
config/: __init__.py  asgi.py  celery.py  conftest.py  environment.py  gunicorn.conf.py  html.py  jinja2.py  project.py  settings.py  storage.py  test.py  urls.py  wsgi.py
core/: __init__.py  account_adapter.py  context_processors.py  country.py  email.py  exceptions.py  http.py  init_data.py  latex.py  menus.py  middleware.py  objects.py  sessions.py  signals.py  tasks.py  tests.py  translation.py  urls.py  utils.py  views.py
files/: models.py  signals.py  tasks.py  urls.py  views.py
files_to_be_deleted/: admin.py  apps.py  models.py  signals.py  tasks.py  views.py
pages/: tests.py  urls.py  views.py
payments/: models.py  urls.py  views.py
plans/: admin.py  apps.py  factories.py  models.py  payments.py  tasks.py  translation.py  urls.py  views.py
pricing/: admin.py  forms.py  hx_views.py  models.py  urls.py  views.py
profiles/: admin.py  context_processors.py  models.py  (+4 more)
(+1110 files in other folders)
