[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ['py311']

[tool.isort]
profile = "black"
add_imports = "from __future__ import annotations"



[tool.coverage.run]
branch = true
omit = [
    "manage.py",
    "celery_progress_htmx/*",
    "config/wsgi.py",
    "config/asgi.py",
    "config/celery.py",
    "config/conftest.py",
    "config/settings.py",
    "config/storage_backends.py",
    "config/test.py",
    "config/urls.py",
    "config/jinja2.py",
    "venv/*",
    "_ideas/*",
    "geoip2dbs/*",
    "*/migrations/*",
    "media/*",
    "static/*",
]
[tool.coverage.report]
skip_covered = true
fail_under = 100
show_missing = true
skip_empty = true
