[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ['py311']

[tool.isort]
profile = "black"
add_imports = "from __future__ import annotations"


[tool.coverage.run]
branch = true
parallel = true
omit = [
  "manage.py",
  "*/node_modules/*",
  "celery_progress_htmx/*",
  "venv/*",
  "_ideas/*",
  "geoip2dbs/*",
  "*/migrations/*",
  "media/*",
  "static/*",
  "apps/celery_progress_htmx/*",
]
[tool.coverage.report]
skip_covered = true
fail_under = 100
show_missing = true
skip_empty = true

[tool.djlint]
profile="jinja"
